fixed the z-index bug

--- a/src/components/RespNav/navigation.css
+++ b/src/components/RespNav/navigation.css
@@ -8,7 +8,8 @@
   row-gap: 20px;
   position: absolute;
   background-color: #0f1624;
-  z-index: 999;
+  z-index: 9;
+  margin-top: 50px;
 }
 
 .resp-nav-container .link {
